--- a/config.yml
+++ b/config.yml
@@ -43,7 +43,7 @@
 
 # What is your status page called?
 # Shows up in the browser bar and meta tags
-title: Tekion IT Status Page
+title: Eggsample Status
 
 # Should posts, which have a publish date
 # from the future, be built? Useful for
@@ -97,7 +97,7 @@ defaultContentLanguage: en
 #
 # Broken example:
 # baseUrl: /
-baseURL: https://google.com
+baseURL: https://example.com
 
 # For features like Last modified, you
 # need to use a Git repository. If you
@@ -143,28 +143,12 @@ params:
   # For help, see the wiki:
   # https://github.com/cstate/cstate/wiki/Customization
   categories:
-    - name: Offices
-      description: Check here for Operational status of our Offices.
+    - name: North Coast
+      description: The main servers are located here.
       closed: true
-
-    - name: URLs/Websites
-      description: Check here for Operational status of our URLs and Websites.
-      closed: true
-
-    - name: IT Cloud Infrastructure
-      description: Check here for Operational status of IT Cloud Infrastructure
-      closed: true
-      untitled: false
-
-    - name: IT Internal
-      description: Check here for Operational status of IT Internal.
-      closed: true
-      untitled: false
-
-    - name: Corp Apps Services
-      description: Check here for Operational status of Corp Apps Services.
-      closed: true
-      untitled: false
+    - name: Empty Category
+    - name: Uncategorized
+      untitled: true
 
   # These are your systems. Change them to
   # change the amount of components.
@@ -174,61 +158,20 @@ params:
   # For help, see the wiki:
   # https://github.com/cstate/cstate/wiki/Customization
   systems:
-    #Offices
-    - name: Bangalore
-      category: Offices
-    - name: Chennai
-      category: Offices
-    - name: OAK
-      category: Offices
-    - name: CVG
-      category: Offices
-    - name: Austin
-      category: Offices
-
-    - name: Teams Rooms
-      category: IT Internal
-      link:
-    - name: Access Controlls
-      category: IT Internal
-    - name: Status Page
-      category: IT Internal  
-
-    - name: Nginx Servers
-      category: IT Cloud Infrastructure
-      link:
-    - name: Nagios India Servers
-      category: IT Cloud Infrastructure
-      link:
-    - name: Nagios US Servers
-      category: IT Cloud Infrastructure
-      link:
-
-    - name: Tekion Official Website
-      category: URLs/Websites
-      link: https://tekion.com/
-
-    - name: IT Helpdesk
-      category: URLs/Websites
-      link: https://helpdesk.tekion.com/
-
-    - name: Corp VPN
-      category: URLs/Websites
-      link: https://vpn.tekion.com/
-
-    # Corp Apps  
-
-    - name: Jira
+    - name: Offices
+      category: North Coast
+    - name: Backup Gateway
+      category: North Coast
+    - name: URL/Websites
+      description: The web frontend for the application.
+      category: Uncategorized
+      link: https://example.com/
+    - name: Cloud Infra
       description: The guts of the application.
-      category: Corp Apps Services
-    - name: Confluence
+      category: Uncategorized
+    - name: Media Proxy
       description: This is the service responsible for serving images, audio, and video. It is reliant on our CDN.
-      category: Corp Apps Services
-    - name: Gateway
-      description: Gateway service for handling connections.
-      category: Corp Apps Services
-
-    
+      category: Uncategorized
 
   # What date format to use?
   #
@@ -343,30 +286,22 @@ params:
   #
   # Recommended: png, bmp, jpg, or gif
   # for best browser support!
-  logo: tekionlogo.png
+  logo: logo.png
 
   # This is the description that is shown
   # on the footer and meta tags.
   #
   # Default: We continuously monitor the status of our services and if there are any interruptions, a note will be posted here.
-  description: We are Tekion IT, continuously monitoring all our systems Globally.
+  description: We continuously monitor the status of our services and if there are any interruptions, a note will be posted here.
 
   # Tabs on homepage
   # Uncomment to enable.
   #
   # Format:
-  customTabs:
-    -
-      name: SLA
-      link: "#sla"
-      widget: sla
-      required: true
-
-    -
-      name: Security
-      link: "#security"
-      widget: security
-      required: true
+  # customTabs:
+  #  -
+  #    name: Name
+  #    link: https://example.com
 
   # Disable complex server-side
   # calculations that may impact
@@ -384,7 +319,7 @@ params:
   # in one page
   #
   # NUMERIC; Default: `10`
-  incidentPostsPerPage: 5
+  incidentPostsPerPage: 10
 
   # Colors throughout cState
   #
@@ -398,7 +333,7 @@ params:
   # disrupted: "#cc4400"
   # down: "#e60000"
   # notice: "#24478f"
-  brand: "#00D15A"
+  brand: "#0a0c0f"
   ok: "#008000"
   disrupted: "#cc4400"
   down: "#e60000"
